# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  common.h  draw.c  draw.h  gameVariables.h  game_logic.c  game_logic.h  init.c  init.h  input.c  input.h  main.c  unit_tests.c
